<resources>
    <string name="app_name">Second Choise</string>
    <string name="slogan">Tes Cepat, Skor Tepat!</string>
    <string name="awalan1">Ujian yang tersedia:</string>
    <string name="awalan1_btn">UTS Pemrograman Mobile</string>
    <string name="awalan2">Video Pembelajaran yang tersedia:</string>
    <string name="awalan2_btn">Tutorial Pemrograman Mobile</string>
    <string name="titleSoal">Ujian tengah semester</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="done">Selamat kamu telah menyelesaikan UTS 🎉🎉🎉</string>
    <string name="nilai">Nilai Kamu adalah</string>
    <string name="score">Score kamu adalah: </string>
    <string name="backHome">Kembali ke Home</string>
</resources>