<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnswerActivity"
    android:background="@color/sage">

    <TextView
        android:id="@+id/doneTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doneTitle"
        android:layout_marginTop="180dp"
        android:text="@string/nilai"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_bold"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/nilai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textScore"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_bold"
        android:textSize="60sp"/>

    <TextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nilai"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btnBackHome"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:text="@string/backHome"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_bold"
        android:textSize="15sp"/>





</androidx.constraintlayout.widget.ConstraintLayout>